# react-chat

./: LICENSE  README.md  meson.build
.ahub/tcchecker-tca/: config.yaml
.github/: CODEOWNERS
c/: README.md  capi-ml-inference.pc.in  meson.build
c/doc/: nnstreamer_doc.h
c/include/: meson.build  ml-api-common.h  ml-api-service-internal.h  ml-api-service.h  nnstreamer-single.h  nnstreamer-tizen-internal.h  nnstreamer.h
c/include/platform/: tizen_error.h
c/src/: README.md  meson.build  ml-api-common-tizen-feature-check.c  ml-api-common.c  ml-api-inference-internal.c  ml-api-inference-internal.h  ml-api-inference-pipeline-internal.h  ml-api-inference-pipeline.c  ml-api-inference-single-internal.h  ml-api-inference-single.c  ml-api-inference-tizen-privilege-check.c  ml-api-internal.h  ml-api-service-agent-client.c  ml-api-service-common.c  ml-api-service-private.h  ml-api-service-query-client.c
daemon/: gdbus-util.c  main.c  meson.build  model-dbus-impl.cc  modules.c  pipeline-dbus-impl.cc  pkg-mgr.c  service-db.cc
daemon/includes/: common.h  dbus-interface.h  gdbus-util.h  log.h  modules.h  pkg-mgr.h  service-db.hh  test-dbus-interface.h
dbus/: machine-learning-agent.conf.in  meson.build  model-dbus.xml  pipeline-dbus.xml  test-dbus.xml
debian/: changelog  control  copyright  ml-api-common-dev.install  rules
java/: build-nnstreamer-android.sh  build-nnstreamer-ubuntu.sh  meson.build
java/android/: build.gradle  gstreamer-1.20.0-patch-for-nns-tracing.patch
java/android/nnstreamer/: build.gradle
java/android/nnstreamer/src/androidTest/java/org/nnsuite/nnstreamer/: APITestCommon.java  APITestCustomFilter.java  APITestPipeline.java  APITestSingleShot.java  APITestTensorsData.java  APITestTensorsInfo.java
java/android/nnstreamer/src/main/java/org/nnsuite/nnstreamer/: CustomFilter.java  NNStreamer.java  Pipeline.java  SingleShot.java  TensorsData.java  TensorsInfo.java
java/android/nnstreamer/src/main/jni/: Android-flatbuf.mk  Android-gst-plugins.mk  Android-mxnet.mk  Android-nnfw-prebuilt.mk  Android-nnfw.mk  Android-nnstreamer-prebuilt.mk  Android-nnstreamer.mk  Android-pytorch.mk  Android-snap-prebuilt.mk  Android-snap.mk  Android-snpe-prebuilt.mk  Android-snpe.mk  Android-tensorflow-lite.mk  Android.mk  nnstreamer-native-api.c  nnstreamer-native-customfilter.c  nnstreamer-native-pipeline.c  nnstreamer-native-singleshot.c  nnstreamer-native.h
packaging/: capi-machine-learning-inference.manifest  machine-learning-api.spec  run-unittest.sh  run_unittests.sh
tests/: meson.build
tests/capi/: meson.build  unittest_capi_datatype_consistency.cc  unittest_capi_inference.cc  unittest_capi_inference_latency.cc  unittest_capi_inference_nnfw_runtime.cc  unittest_capi_inference_single.cc  unittest_capi_service_agent_client.cc  unittest_util.c
tests/daemon/: meson.build  test-dbus-impl.c  unittest_dbus_model.cc  unittest_ml_agent.cc  unittest_service_db.cc
tests/services/: org.tizen.machinelearning.service.service.in
